# kinodata-3D-affinity-prediction

./: pyproject.toml  setup.py
kinodata/data/: __init__.py  data_module.py  dataset.py
