[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinodata"
version = "1.0.0"
description = "Kinodata 3D Affinity Prediction Package"
dependencies = [
    "numpy>=1.24.1",
    "pandas",
    "scipy",
    "tqdm",
    "matplotlib",
    "ipykernel",
    "black",
    "wandb",
    "pytorch-lightning",
    "mypy",
    "seaborn",
    "cvxpy",
    "biotite",
    "biopandas",
    "torch",
    "torch_cluster",
    "torch_scatter",
    "rdkit",
    "torch_geometric",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["kinodata*", "kinodata.transform*", "kinodata.model*", "kinodata.training*", "kinodata.data*"]
